--- a/Maui_MVVMDemo/MVVM/Views/PersonView.xaml
+++ b/Maui_MVVMDemo/MVVM/Views/PersonView.xaml
@@ -8,5 +8,13 @@
         <Label 
             Text="{Binding Person.Name}"
             FontSize="50" />
+        <Slider
+            Maximum="100"
+            Minimum="0"
+            Value="{Binding Person.Age}" />
+        <Switch IsToggled="{Binding Person.Married}" />
+        <DatePicker Date="{Binding Person.BirthDate}" />
+        <Entry Text="{Binding Person.Weight}" />
+        <TimePicker Time="{Binding Person.Lunchtime}" />
     </StackLayout>
 </ContentPage>
